// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks Can return aggregated data 1`] = `
Object {
  "blocks": Array [
    Object {
      "number": 3037760,
      "transactions_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fee": 176129,
            "size": 313.27272727272725,
            "totalOutput": 421674965437.5455,
          },
          "count": "22",
          "max": Object {
            "fee": "204045",
            "size": "858",
            "totalOutput": "9223859752216",
          },
          "min": Object {
            "fee": "167085",
            "size": "237",
            "totalOutput": "12806911",
          },
          "sum": Object {
            "deposit": "0",
            "fee": "3874838",
            "size": "6892",
            "totalOutput": "9276849239626",
          },
        },
      },
    },
  ],
}
`;

exports[`blocks Can return blocks by number 1`] = `
Object {
  "blocks": Array [
    Object {
      "hash": "36f4d3e433e54c43d2a13e22b6b7168dcf672d446b14f1fcc725eaf13d8c102b",
      "vrfKey": null,
    },
    Object {
      "hash": "94f99e9dadd818a49d7966f788bbe1a7b31fd109217ffc015d450db9b262aa90",
      "vrfKey": "vrf_vk16t90lzn5arxkz5det5yzwty0ja9vq6weupade2gfp8nc4gy3llrsd6nkwe",
    },
  ],
}
`;

exports[`blocks Can return filtered aggregated data 1`] = `
Object {
  "blocks": Array [
    Object {
      "number": 3037760,
      "transactions_aggregate": Object {
        "aggregate": Object {
          "count": "21",
        },
      },
    },
  ],
}
`;

exports[`blocks are linked to their predecessor, and the chain can be traversed 1`] = `
Object {
  "blocks": Array [
    Object {
      "hash": "36f4d3e433e54c43d2a13e22b6b7168dcf672d446b14f1fcc725eaf13d8c102b",
      "previousBlock": Object {
        "number": 29021,
        "previousBlock": Object {
          "number": 29020,
          "previousBlock": Object {
            "number": 29019,
          },
        },
      },
    },
  ],
}
`;

exports[`blocks are linked to their successor, and the chain can be traversed 1`] = `
Object {
  "blocks": Array [
    Object {
      "hash": "36f4d3e433e54c43d2a13e22b6b7168dcf672d446b14f1fcc725eaf13d8c102b",
      "nextBlock": Object {
        "nextBlock": Object {
          "nextBlock": Object {
            "number": 29025,
          },
          "number": 29024,
        },
        "number": 29023,
      },
    },
  ],
}
`;
